# marty2_description

./: .pre-commit-config.yaml  Dockerfile  README.md  cyclone_dds.xml  dev.sh  runtime.sh
marty1_description/: CMakeLists.txt  README.md  package.xml
marty1_description/launch/: marty1_description.launch.xml
marty1_description/urdf/: marty.urdf
marty2_description/: CMakeLists.txt  README.md  package.xml
marty2_description/launch/: marty2_control.launch.xml  marty2_description.launch.xml  send_trajectory_commands.launch.xml
marty2_description/meshes/: arm.stl  arm_servo_gear.stl  eye_left.stl  eye_right.stl  foot.stl  hand.stl  head.stl  hip.stl  knee_lower.stl  knee_upper.stl  martyV2-head.stl  shin.stl  side_panel.stl  thigh.stl  twist_lower.stl  twist_upper.stl
marty2_description/ros2_control/: marty2.ros2_control.xacro  ros2_controllers.yaml  trajectory_commands.yaml
marty2_description/urdf/: fixed.xacro  marty.urdf  materials.xacro  revolute.xacro
marty2_description/urdf/marty2/: marty2.urdf  marty2.xacro  marty2_params.xacro  marty2_structure.xacro
