<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>marty2_description</name>
  <version>0.0.0</version>
  <description>This pkg contains the Marty v2 urdf and mesh files</description>
  <maintainer email="alex.bordallo@ed.ac.uk">Alejandro Bordallo</maintainer>
  <maintainer email="alexander@robotical.io">Sandy Enoch</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
